--- a/styles/app.scss
+++ b/styles/app.scss
@@ -31,3 +31,15 @@ body {
 
 @import './config.scss';
 @import './login.scss';
+@import './header.scss';
+
+button{
+    display: block;
+    border: none;
+    background-color: $primaryColor;
+    color: white;
+    border-radius: 12px;
+    font-size: 16px;
+    height: 40px;
+    align-items: center;
+}
