Add task layout

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -35,6 +35,8 @@ body {
 @import './filter.scss';
 @import './footer.scss';
 @import './list.scss';
+@import './item.scss';
+
 
 button{
     display: block;
