--- a/styles/app.scss
+++ b/styles/app.scss
@@ -36,7 +36,7 @@ body {
 @import './footer.scss';
 @import './list.scss';
 @import './item.scss';
-
+@import './modal.scss';
 
 button{
     display: block;
