Add register page

--- a/styles/config.scss
+++ b/styles/config.scss
@@ -4,3 +4,4 @@ $lightGreyColor: #FFEBF2;
 $mediumGreyColor: #91A3AD;
 $darkGreyColor: #575757;
 $errorColor: #ED421C;
+$sucessColor: rgb(90, 189, 90);
