--- a/styles/login.scss
+++ b/styles/login.scss
@@ -15,6 +15,13 @@
         font-weight: bold;
         max-width: 300px;
     }
+
+    .sucess{
+        text-align: center;
+        color: $sucessColor;
+        font-weight: bold;
+        max-width: 300px;
+    }
     
     .input{
         display: flex;
