--- a/styles/modal.scss
+++ b/styles/modal.scss
@@ -36,6 +36,12 @@
         font-size: 14px;
         margin-top: 10px;
     }
+
+    .sucess{
+        color: rgb(68, 204, 68);
+        font-size: 14px;
+        margin-top: 10px;
+    }
     
     .button{
         display: flex;
